# register

./: .gitignore  pyproject.toml
app/: config.py  connection.py  main.py  models.py  security.py
app/auth/: security.py  utils.py
app/core/: config.py  connection.py
app/routers/: users.py  validate.py
