[project]
name = "register"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.12"
dependencies = [
    "fastapi[standart] (>=0.136.1,<0.137.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pydantic[email] (>=2.13.3,<3.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
